# wokwi-python-client

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: index.md
docs/reference/: wokwi_client.md
examples/hello_esp32/: main.py
examples/hello_esp32_idf/: .gitignore  diagram.json  main.py
examples/hello_esp32_sync/: .gitignore  main.py
examples/helper/: github_download.py
examples/logic_analyzer/: README.md  diagram.json  main.py
examples/micropython_esp32/: README.md  diagram.json  main.py
src/wokwi_client/: __init__.py  __main__.py  __version__.py  client.py  client_sync.py  client_sync.pyi  constants.py  control.py  event_queue.py  exceptions.py  file_ops.py  framebuffer.py  idf.py  models.py  pins.py  protocol_types.py  serial.py  simulation.py  touch.py  transport.py  vcd.py
src/wokwi_client/cli/: __init__.py
tests/: __init__.py  test_cli.py  test_hello_esp32.py  test_logic_analyzer.py  test_micropython_esp32.py  utils.py
